macros/tests/ui/gservice_fails_to_parse_service_impl.stderr
error: Failed to parse service impl: expected `impl`
 --> tests/ui/gservice_fails_to_parse_service_impl.rs:4:1
  |
4 | struct MyService;
  | ^^^^^^
