macros/tests/ui/gservice_fails_to_parse_service_impl.rs
use sails_macros::gservice;

#[gservice]
struct MyService;

#[tokio::main]
async fn main() {}
